--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
   <link href="styles.css" rel="stylesheet">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.7.2/css/all.min.css">
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/material-icons@1.13.12/iconfont/material-icons.min.css">
+  <link rel="icon" href="favicon.ico" type="image/x-icon">
 
   <style>
     body, html {
@@ -219,5 +220,7 @@
       document.body.classList.toggle('dark');
     });
   </script>
+  <script src="index.js"></script>
+
 </body>
 </html>
