--- a/dashboard.html
+++ b/dashboard.html
@@ -128,7 +128,7 @@
                 </label>
                 <ul>
                     <li><a href="dashboard.html">Home</a></li>
-                    <li><a href="#">Web Tools</a></li>
+                    <li><a href="webtools.html">Web Tools</a></li>
                     <li><a href="#">About</a></li>
                     <li><a href="#">Contact</a></li>
                     <li><a href="#">Author</a></li>
