--- a/webtools.html
+++ b/webtools.html
@@ -76,7 +76,7 @@
 
         <!-- Navbar Links -->
         <div class="hidden md:flex space-x-6 text-white font-medium">
-            <a href="Dashboard.html" class="navbar-item hover:text-yellow-400">Home</a>
+            <a href="index.html" class="navbar-item hover:text-yellow-400">Home</a>
             <a href="#services" class="navbar-item hover:text-yellow-400">Services</a>
             <a href="#contact" class="navbar-item hover:text-yellow-400">Contact</a>
 
