--- a/BackgroundRemoval.html
+++ b/BackgroundRemoval.html
@@ -102,7 +102,7 @@
     <div id="navbar">
         <img src="assets/1739468967432owpiav36.jpg" alt="Logo">
         <div>
-            <a href="Dashboard.html">Home</a>
+            <a href="webtools.html">Home</a>
             <a href="BackgroundRemoval.html">Background Removal</a>
             <a href="#">Other Section</a>
         </div>
