--- a/Movies.html
+++ b/Movies.html
@@ -11,6 +11,7 @@
   <div class="loader">
     <div data-glitch="Loading..." class="glitch">Loading...</div>
   </div>
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 
   <!-- Main Content -->
   <div id="main-content" style="display: none;">
