--- a/dashboard.html
+++ b/dashboard.html
@@ -154,6 +154,7 @@
           <li><a href="Movies.html">Movies</a></li>
           <li><a href="#">About</a></li>
           <li><a href="#">Contact</a></li>
+          <li><a href="SUDUAI.html">SUDU AI</a></li>
         </ul>
         <div class="profile-menu">
           <i class="material-icons profile-icon">account_circle</i>
