--- a/SUDUAI.html
+++ b/SUDUAI.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Sudu AI - ආදරයෙන් කතා කරන Chatbot</title>
-  <link rel="stylesheet" href="styles.css">
+  <link rel="stylesheet" href="sudu.css">
   <div id="welcome-message">
     <h2>ආයුබෝවන්! ඔබව සාදරයෙන් පිළිගනිමු! 😊</h2>
     <p>ඔබගේ ගමන අප සමඟ අරඹන්න!</p>
@@ -17,6 +17,6 @@
     <input type="text" id="userInput" placeholder="ඔබේ පණිවිඩය ටයිප් කරන්න..." />
     <button onclick="sendMessage()">කතා කරන්න</button>
   </div>
-  <script src="script.js"></script>
+  <script src="sudu.js"></script>
 </body>
 </html>
